--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body {
   align-items: center;
   padding: 2rem 0;
   border-radius: 1rem;
+  flex-shrink: 5;
 }
 .card-2 h2 {
   font-size: 3rem;
@@ -176,11 +177,240 @@ body {
 }
 .card-8 h2 {
   font-size: 2.5rem;
-  width: 22rem;
+  /* width: 22rem; */
   padding-left: 3rem;
+  flex: 1;
+  min-width: 0;
 }
 .card-8 img {
-  width: 300px;
+  /* width: 300px;
   height: 200px;
   margin-left: 2rem;
+  flex: 1; */
+  width: 30%; /* Allow image to be responsive */
+  height: 90%; /* Maintain aspect ratio */
+  margin-left: 2rem;
+  flex: 1;
+  max-width: 300px;
+}
+
+/* responsive*/
+
+@media screen and (max-width: 1500px) {
+  .card-1 h2 {
+    font-size: 2.5rem;
+  }
+  .card-2 h2 {
+    font-size: 1.8rem;
+    width: 100%;
+  }
+
+  .card-3 h2 {
+    font-size: 1.5rem;
+  }
+  .card-4 h2 {
+    font-size: 1rem;
+    margin-left: 0;
+  }
+  .card-5 h2 {
+    font-size: 1.7rem;
+  }
+  .card-8 h2 {
+    font-size: 2rem;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .card-1 h2 {
+    font-size: 2rem;
+  }
+  .card-1 img {
+    width: 80%;
+  }
+  .card-2 h2 {
+    font-size: 1.2rem;
+    padding: 0;
+  }
+
+  .card-3 h2 {
+    font-size: 1.2rem;
+  }
+  .card-4 h2 {
+    font-size: 1rem;
+    margin-left: 0;
+  }
+  .card-5 h2 {
+    font-size: 1.3rem;
+  }
+  .card-7 h2 {
+    font-size: 2rem;
+  }
+  .card-8 h2 {
+    font-size: 1.5rem;
+  }
+}
+@media screen and (max-width: 960px) {
+  .container {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+  }
+  .card-1 {
+    grid-column: 1/3;
+    grid-row: 1/4;
+    h2{
+        font-size: 1rem;
+    }
+    img{
+        width: 60%;
+    }
+  }
+  .card-2 {
+    grid-column: 3/5;
+    grid-row: 1/4;
+    
+  }
+  .card-3 {
+    grid-column: 1/3;
+    grid-row: 4/7;
+    margin: 0;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img{
+        width: 30%;
+    }
+    h2{
+        font-size: 1rem;
+    }
+    p{
+        font-size: .7rem;
+    }
+
+  }
+  .card-4 {
+    grid-column: 3/5;
+    grid-row: 4/7;
+    h2{
+        font-size: 1rem;
+        width: 100%;
+    }
+
+  }
+  .card-5{
+    grid-column: 1/3;
+    grid-row: 7/10;
+    h2{
+        font-size: 1.2rem;
+    }
+
+  }
+  .card-6{
+    grid-column: 3/5;
+    grid-row: 7/10;
+    h2{
+        width: 100%;
+    }
+
+  }
+  .card-7{
+    grid-column: 1/3;
+    grid-row: 10/13;
+    h2{
+        font-size: 1rem;
+    }
+
+  }
+  .card-8{
+    grid-column: 3/5;
+    grid-row: 10/13;
+    h2{
+        font-size: 1rem;
+    }
+
+
+  }
+  @media screen and (max-width: 560px) {
+    .container {
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: repeat(8, 200px);
+    }
+    .card-1 {
+        grid-column: 1;
+
+      grid-row: 1;
+      h2{
+          font-size: 1rem;
+      }
+      img{
+          width: 60%;
+      }
+    }
+    .card-2 {
+      grid-row: 2;
+      grid-column: 1;
+
+      
+    }
+    .card-3 {
+      grid-column: 1;
+      grid-row: 3;
+      margin: 0;
+      padding: 5px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img{
+          width: 30%;
+      }
+      h2{
+          font-size: 1rem;
+      }
+      p{
+          font-size: .7rem;
+      }
+  
+    }
+    .card-4 {
+      grid-column: 1;
+      grid-row: 4;
+      h2{
+          font-size: 1rem;
+          width: 100%;
+      }
+  
+    }
+    .card-5{
+      grid-column: 1;
+      grid-row: 5;
+      h2{
+          font-size: 1.2rem;
+      }
+  
+    }
+    .card-6{
+      grid-column: 1;
+      grid-row: 6;
+      h2{
+          width: 100%;
+      }
+  
+    }
+    .card-7{
+      grid-column: 1;
+      grid-row: 7;
+      h2{
+          font-size: 1rem;
+      }
+  
+    }
+    .card-8{
+      grid-column: 1;
+      grid-row: 8;
+      h2{
+          font-size: 1rem;
+      }
+  
+  
+    }
+
 }
